adjuistend environment and build options v.1.0.1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="/vite.svg" />
+			href="src/assets/bIcon.svg" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
@@ -24,6 +24,7 @@
 			};
 			console.log("loading");
 		</script>
+		<!-- <script src="/src/assets/icons-bundle.js"></script> -->
 		<title>Doc Manager</title>
 	</head>
 	<body class="h-screen w-screen overflow-x-hidden">
@@ -41,4 +42,3 @@
 			src="/src/main.ts"></script>
 	</body>
 </html>
-
