--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-	class="h-screen w-screen"
+	class=""
 	lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -27,16 +27,14 @@
 		<!-- <script src="/src/assets/icons-bundle.js"></script> -->
 		<title>Doc Manager</title>
 	</head>
-	<body class="h-screen w-screen overflow-x-hidden">
+	<body class="overflow-x-hidden">
 		<div class="page-loader">
 			<div class="cube"></div>
 			<div class="cube"></div>
 			<div class="cube"></div>
 			<div class="cube"></div>
 		</div>
-		<div
-			id="app"
-			class="h-full w-full"></div>
+		<div id="app"></div>
 		<script
 			type="module"
 			src="/src/main.ts"></script>
