first change to ui

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- <script src="/src/assets/icons-bundle.js"></script> -->
 		<title>Doc Manager</title>
 	</head>
-	<body class="overflow-x-hidden">
+	<body class="overflow-x-hidden min-h-screen">
 		<div class="page-loader">
 			<div class="cube"></div>
 			<div class="cube"></div>
